--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "socket.io": "^4.5.1"
   }
 }
