--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
     "sequelize": "^6.19.0",
+    "jsonwebtoken": "^8.5.1",
     "socket.io": "^4.5.1"
   }
 }
